@@ -1,11 +1,8 @@
 package net.demilich.metastone.game.decks;
 
 import net.demilich.metastone.game.cards.Card;
-import net.demilich.metastone.game.cards.CardSet;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
+import java.util.Objects;
 import java.util.Set;
 
 public final class FixedCardsDeckFormat extends DeckFormat {
@@ -13,7 +10,7 @@ public final class FixedCardsDeckFormat extends DeckFormat {
 
 	public FixedCardsDeckFormat(String... cardIds) {
 		super();
-		this.cardIds = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(cardIds)));
+		this.cardIds = Set.of(cardIds);
 	}
 
 	@Override
@@ -24,5 +21,18 @@ public final class FixedCardsDeckFormat extends DeckFormat {
 	@Override
 	public boolean isInFormat(String set) {
 		return false;
+	}
+
+	@Override
+	public boolean equals(Object o) {
+		if (this == o) return true;
+		if (!(o instanceof FixedCardsDeckFormat)) return false;
+		FixedCardsDeckFormat that = (FixedCardsDeckFormat) o;
+		return Objects.equals(cardIds, that.cardIds);
+	}
+
+	@Override
+	public int hashCode() {
+		return Objects.hash(cardIds);
 	}
 }
